modified:   redor.ipynb
	modified:   redor.ipynb

--- a/redor.ipynb
+++ b/redor.ipynb
@@ -17,6 +17,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c058f9c",
+   "metadata": {},
+   "source": [
+    "#### Define data and experiment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "51f2e777",
@@ -34,14 +42,6 @@
     "from scipy.optimize import curve_fit\n",
     "from utils import gamma\n",
     "from utils.function import redor_bessel"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c058f9c",
-   "metadata": {},
-   "source": [
-    "#### Define data and experiment"
    ]
   },
   {
@@ -70,6 +70,7 @@
     "\n",
     "# define constants\n",
     "mu_0 = physical_constants['vacuum mag. permeability'][0]\n",
+    "print(mu_0)\n",
     "hbar = physical_constants['reduced Planck constant'][0]\n",
     "gamma_I = gamma.C\n",
     "gamma_S = gamma.N\n",
@@ -122,7 +123,7 @@
     "        # define peak region\n",
     "        pp_threshold = data.max()/2\n",
     "        peaks = ng.peakpick.pick(data, pthres=pp_threshold, algorithm=\"downward\")\n",
-    "        peak_center = peaks[2][\"X_AXIS\"]  # (peaks[0][\"X_AXIS\"] + peaks[1][\"X_AXIS\"])/2\n",
+    "        peak_center = (peaks[0][\"X_AXIS\"] + peaks[1][\"X_AXIS\"])/2\n",
     "        int_lb = int(peak_center - int_width/2)\n",
     "        int_ub = int(peak_center + int_width/2)\n",
     "        ax.plot(data.real)\n",
@@ -183,7 +184,7 @@
     "time_exp = np.zeros(int_list.shape[1])\n",
     "\n",
     "for i in range(int_list.shape[1]):\n",
-    "    time_exp[i] = (cnst10*i+1)*d5\n",
+    "    time_exp[i] = 2*(cnst10*i+1)*d5\n",
     "# print(time_exp)\n",
     "print(\"Maximum evolution time: {:.1f} ms\".format(time_exp[-1]))\n",
     "\n",
@@ -232,7 +233,7 @@
    "outputs": [],
    "source": [
     "# define experiment\n",
-    "EXPNAME = '240322_glycineEthylEster_3p2mm_HXY700'\n",
+    "EXPNAME = os.getenv(\"EXPNAME\")\n",
     "expno = '50'\n",
     "filename = os.path.join(\"./\", \"data\", EXPNAME + \"_\" + expno + \".csv\")\n",
     "with open(filename, newline='') as csvfile:\n",
@@ -270,6 +271,7 @@
     "popt, pconv = curve_fit(redor_calculator, time_exp, redor_list, p0=d_IS_guess, bounds=(0,10))\n",
     "# perr = np.sqrt(np.diag(pconv))  # standard deviation\n",
     "# d_IS_opt = popt[0]\n",
+    "print('Dipolar coupling constant by fitting = {:.3f} kHz'.format(popt[0]))\n",
     "\n",
     "r_opt = (-mu_0 / (4*pi) * (gamma_I*gamma_S*hbar) / (2*pi) / popt[0] /1000)**(1/3) * 10**9  # in nm\n",
     "print('Fitted r = {:.3f} nm'.format(r_opt))\n",
