--- a/drenar.ipynb
+++ b/drenar.ipynb
@@ -24,7 +24,7 @@
     "from scipy.constants import physical_constants\n",
     "from scipy.optimize import curve_fit\n",
     "from utils import gamma\n",
-    "from utils.function import ctdrenar"
+    "from utils.function import drenar"
    ]
   },
   {
@@ -59,11 +59,9 @@
     "print(\"Path to experiment data: \"+dir_exp)\n",
     "\n",
     "# define experiment paramters\n",
-    "l0 = 3\n",
+    "l0 = 1\n",
     "spin_rate = 8  # in kHz\n",
     "t = l0 * 16 / spin_rate  # in ms, 16 rotor cycles per BaBa block\n",
-    "\n",
-    "print(\"Dephasing time: {:.1f} ms\".format(t))\n",
     "\n",
     "# define constants\n",
     "mu_0 = physical_constants['vacuum mag. permeability'][0]\n",
@@ -96,29 +94,28 @@
     "        for line in f.readlines():\n",
     "            int_list.append([float(x) for x in line.split()])\n",
     "    int_list = np.reshape(int_list, (len(int_list[1]), len(int_list)))\n",
+    "    int_list = np.reshape(int_list[0],(2,-1))\n",
     "else:\n",
     "    pass # raise error\n",
     "\n",
-    "phase_increment = 180 / (len(int_list[0])-1)  # in ms\n",
+    "time_discrete = 16 / spin_rate * l0 * np.linspace(1, int_list.shape[1], num=int_list.shape[1])  # in ms\n",
+    "time_continuous = np.linspace(0, time_discrete[-1], num=100)\n",
     "\n",
-    "phase_discrete = np.linspace(0, 180, num=len(int_list[0]))\n",
-    "phase_continuous = np.linspace(0, 180, num=100)\n",
-    "\n",
-    "print(\"{:d} steps, phase increment {:.1f} degree for each step.\".format(len(int_list[0]), phase_increment))\n",
+    "print(\"{:d} steps, longest dephasing time {:.1f} ms.\".format(int_list.shape[1], time_discrete[-1]))\n",
     "\n",
     "print(\"\\nList of integrals: \")\n",
-    "print(int_list[0])\n",
+    "print(int_list)\n",
     "\n",
     "diff_list = np.zeros(np.shape(int_list)[1])\n",
     "for i in range(np.shape(int_list)[1]):\n",
-    "    diff_list[i] = 1 - int_list[0][i]/int_list[0][int((np.shape(int_list)[1]-1)/2)]\n",
+    "    diff_list[i] = 1 - int_list[0][i]/int_list[1][i]\n",
     "\n",
     "print(\"\\nList of relative differences to reference: \")\n",
     "print(diff_list)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,4), constrained_layout=True)\n",
-    "ax.scatter(phase_discrete, diff_list)\n",
-    "ax.set_xlabel('Phase angle (degree)')\n",
+    "ax.scatter(time_discrete, diff_list)\n",
+    "ax.set_xlabel('Dephasing time (ms)')\n",
     "ax.set_ylabel('1-S/S0')\n",
     "plt.show()"
    ]
@@ -128,7 +125,7 @@
    "id": "2830fd8a",
    "metadata": {},
    "source": [
-    "#### Fit the CT-DRENAR curve"
+    "#### Fit the DRENAR curve"
    ]
   },
   {
@@ -140,16 +137,16 @@
    },
    "outputs": [],
    "source": [
+    "points_for_fitting = 3\n",
+    "\n",
     "d_guess = mu_0 / (4*pi) * (gamma_I*gamma_S*hbar) / (2*pi) / (r_guess/10**9)**3 /1000  # in kHz\n",
     "print('Dipolar coupling constant by guess = {:.3f} kHz'.format(d_guess))\n",
-    "z_guess = (d_guess*t)**2\n",
     "\n",
-    "calculator = ctdrenar()\n",
+    "calculator = drenar_parabola()\n",
     "\n",
-    "popt, pconv = curve_fit(calculator, phase_discrete, diff_list, p0=z_guess)\n",
+    "popt, pconv = curve_fit(calculator, time_discrete[:points_for_fitting], diff_list[:points_for_fitting], p0=d_guess)\n",
     "#perr = np.sqrt(np.diag(pconv))  # standard deviation\n",
-    "z_opt = popt[0]\n",
-    "d_opt = np.sqrt(z_opt)/t\n",
+    "d_opt = popt[0]\n",
     "print('Effective dipolar coupling constant by fitting = {:.3f} kHz'.format(d_opt))\n",
     "\n",
     "r_opt = (mu_0 / (4*pi) * (gamma_I*gamma_S*hbar) / (2*pi) / d_opt /1000)**(1/3) * 10**9  # in nm\n",
@@ -157,17 +154,18 @@
     "\n",
     "\n",
     "# plot\n",
-    "diff_opt = calculator(phase_continuous, z_opt)\n",
-    "diff_guess = calculator(phase_continuous, z_guess)\n",
+    "diff_opt = calculator(time_continuous, d_opt)\n",
+    "diff_guess = calculator(time_continuous, d_guess)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,4), constrained_layout=True)\n",
-    "ax.scatter(phase_discrete, diff_list)\n",
-    "ax.plot(phase_continuous, diff_opt)\n",
+    "ax.scatter(time_discrete, diff_list)\n",
+    "ax.plot(time_continuous, diff_opt)\n",
     "#ax.plot(time_axis, redor_guess)\n",
-    "ax.set_xlabel('Phase angle (degree)')\n",
+    "ax.set_xlabel('Dephasing time (ms)')\n",
     "ax.set_ylabel('1-S/S0')\n",
-    "ax.set_xlim(left=0, right=180)\n",
-    "ax.text(0.75*180,0.1*diff_opt.max(),'Effective dipolar coupling = {:.0f} Hz'.format(1000*d_opt))\n",
+    "ax.set_xlim(left=0)\n",
+    "ax.set_ylim(bottom=0, top=max(1,1.1*diff_list.max()))\n",
+    "ax.text(0.5*time_discrete[-1],0.1*diff_list.max(),'Effective dipolar coupling = {:.0f} Hz'.format(1000*d_opt))\n",
     "plt.show()\n"
    ]
   },
